# nylawm

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  CMakePresets.json  meson.build  vcpkg.json
nyla/: CMakeLists.txt
nyla/apps/: CMakeLists.txt
nyla/apps/breakout/: CMakeLists.txt  breakout.cc  breakout.h  main.cc
nyla/apps/shipgame/: shipgame.cc
nyla/apps/wm/: CMakeLists.txt  layout.h  main.cc  screen_saver_inhibitor.cc  window_manager.cc  window_manager.h  wm_overlay.cc
nyla/audio/: CMakeLists.txt  main.cc  wave.cc  wave.h
nyla/commons/: CMakeLists.txt  assert.h  cleanup.h  color.cc  handle.h  handle_pool.h  log.h  string.h
nyla/commons/containers/: inline_ring.h  inline_vec.h
nyla/commons/logging/: init.cc
nyla/commons/math/: lerp.cc  mat.h  vec.h
nyla/commons/os/: clock.cc  readfile.cc  spawn.cc  spawn.h  timerfd.cc  timerfd.h
nyla/commons/signal/: signal.cc
nyla/dbus/: CMakeLists.txt  dbus.cc
nyla/debugfs/: CMakeLists.txt  debugfs.cc
nyla/engine/: CMakeLists.txt  asset_manager.cc  asset_manager.h  debug_text_renderer.cc  engine.cc  engine.h  engine0_internal.cc  frame_arena.cc  input_manager.cc  input_manager.h  renderer2d.cc  staging.cc  staging_buffer.cc  staging_buffer.h  tween_manager.cc  tween_manager.h
nyla/platform/: CMakeLists.txt  platform.h  platform_audio.h  platform_dir_watch.h  platform_key_resolver.h
nyla/platform/linux/: CMakeLists.txt  platform_linux.cc  platform_linux.h  platform_linux_audio.cc  platform_linux_dir_watch.cc  platform_linux_key_resolver.cc  platform_x11_error.h  platform_x11_wm_hints.h  x11_error.h  x11_wm_hints.h
nyla/platform/windows/: CMakeLists.txt  platform_windows.cc  platform_windows.h  platform_windows_key_resolver.cc
nyla/rhi/: CMakeLists.txt  rhi.h  rhi_buffer.h  rhi_cmdlist.h  rhi_descriptor.h  rhi_pass.h  rhi_pipeline.h  rhi_sampler.h  rhi_shader.h  rhi_texture.h
nyla/rhi/d3d12/: CMakeLists.txt  rhi_d3d12.cc  rhi_d3d12.h  rhi_d3d12_swapchain.cc
nyla/rhi/renderdoc/: renderdoc.cc
nyla/rhi/vulkan/: CMakeLists.txt  rhi_vulkan.cc  rhi_vulkan.h  rhi_vulkan_buffer.cc  rhi_vulkan_command_list.cc  rhi_vulkan_descriptor.cc  rhi_vulkan_frame.cc  rhi_vulkan_pass.cc  rhi_vulkan_pipeline.cc  rhi_vulkan_sampler.cc  rhi_vulkan_swapchain.cc  rhi_vulkan_sync.cc  rhi_vulkan_texture.cc
nyla/spirview/: CMakeLists.txt  main.cc  spirview.cc  spirview.h
nyla/tools/: psf2_glsl.cc
scripts/: build_ctags.sh  build_wm.sh  check_pragma_once.ps1  install_wm.sh  shaders.py
src/: event_loop.cpp  internal.hpp  keyboard.cpp  layout.cpp  main.cpp  nyla_main.cpp  spawn.cpp
src/handlers/: configure_request.cpp  create_notify.cpp  error.cpp  key_press.cpp  map_request.cpp
tests/: tests.cpp
