# set(CMAKE_CXX_CLANG_TIDY "clang-tidy")

add_subdirectory(apps)
add_subdirectory(audio)
add_subdirectory(commons)
add_subdirectory(engine)
add_subdirectory(platform)
add_subdirectory(rhi)
add_subdirectory(spirview)
add_subdirectory(tools)

if (UNIX AND NOT APPLE)
    add_subdirectory(dbus)
    add_subdirectory(debugfs)
endif()